# flyline-multishell

./: .gitignore  Cargo.toml  README.md  RELEASE-CHECKLIST.md  UPSTREAM_BASE.toml  build.rs  docker-bake.hcl  install.sh
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: ci.yml  generate-demos.yml  release.yml  update-settings-docs.yml
docker/: builder.Dockerfile  demo_agent_mode.Dockerfile  demo_auto_tab_completion.Dockerfile  demo_base.Dockerfile  demo_cursor_style.Dockerfile  demo_custom_animation.Dockerfile  demo_fuzzy_history.Dockerfile  demo_fuzzy_path_suggestions.Dockerfile  demo_fuzzy_suggestions.Dockerfile  demo_inline_history.Dockerfile  demo_ls_colors.Dockerfile  demo_overview.Dockerfile  demo_prompts.Dockerfile  demo_tab_completion_easing.Dockerfile  flyline_help.Dockerfile  install_test_alpine.Dockerfile  install_test_arch.Dockerfile  install_test_bash_3.2.57.Dockerfile  install_test_ubuntu.Dockerfile  install_test_zsh.Dockerfile  release_assets.Dockerfile  specific_bash_version.Dockerfile  zsh_integration_test.Dockerfile  zsh_integration_test.sh
docker/build-release-assets/: .gitkeep
docker/cross/: aarch64-unknown-linux-gnu.Dockerfile  x86_64-unknown-linux-gnu.Dockerfile
docs/: installing_and_upgrading.md
scripts/: flyline.zsh
src/: active_suggestions.rs  bash_funcs.rs  bash_stubs.rs  bash_symbols.rs  changelog.rs  cli.rs  command_acceptance.rs  content_builder.rs  content_utils.rs  cursor.rs  dparser.rs  flycomp_options.rs  globbing.rs  history.rs  lib.rs  logging.rs  mouse_state.rs  palette.rs  perf.rs  prompt_manager.rs  settings.rs  shell_integration.rs  tab_completion_context.rs  text_buffer.rs  threads.rs  tutorial.rs
src/app/: actions.rs  formatted_buffer.rs  mod.rs  tab_completion.rs  ui.rs
src/app/actions/: keyboard.rs  mod.rs  mouse.rs
src/shell/: mod.rs  zsh.rs  zsh_comp_daemon.zsh
tapes/: demo_agent_mode.tape  demo_auto_tab_completion.tape  demo_cursor_style.tape  demo_custom_animation.tape  demo_fuzzy_history.tape  demo_fuzzy_path_suggestions.tape  demo_fuzzy_suggestions.tape  demo_inline_history.tape  demo_ls_colors.tape  demo_overview.tape  demo_prompts_ps1.tape  demo_prompts_ps1_fill.tape  demo_prompts_rps1.tape  demo_setup.tape  demo_tab_completion_easing.tape
tests/: flyline_testing_completion.sh  standalone_startup_tests.rs  zsh_completion_tests.rs  zsh_integration_tests.rs
tests/common/: mod.rs
