[package]
name = "flyline"
version = "1.0.2"
edition = "2024"
repository = "https://github.com/conall88/flyline-multishell"

[lints.clippy]
disallowed_methods = "deny"


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flyline-standalone"
path = "src/bin/standalone.rs"
required-features = ["standalone"]

[[test]]
name = "zsh_completion_tests"
path = "tests/zsh_completion_tests.rs"

[[test]]
name = "zsh_integration_tests"
path = "tests/zsh_integration_tests.rs"

[dependencies]
mimalloc = { version = "0.1.52", default-features = false, features = ["local_dynamic_tls"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.3", features = ["unstable-dynamic"] }
ratatui = { git = "https://github.com/Marlinski/ratatui.git", rev = "fd8e0f024847af467129e0a166390d7e291c1b2e", features = ["default", "unstable-rendered-line-info", "serde"] }
# default flags include "windows" which just causes bloat
# "use-dev-tty" is needed to avoid crossterm's event loop from spinning on closed stdin.
# See https://github.com/crossterm-rs/crossterm/blob/fce58c879a748f3159216f68833100aa16141ab0/src/event/source/unix/mio.rs#L97-L104
# https://github.com/openai/codex/issues/14962
# https://github.com/ki-editor/ki-editor/commit/1dd31aa8eae9ff84498fb23b1319aa05783ca7d7
# https://github.com/crossterm-rs/crossterm/issues/828
# https://github.com/crossterm-rs/crossterm/issues/793
# Use our custom crossterm fork (pointing to commit 78def95567c26a463d9f7554d48c3940d797a254) to support OSC52 clipboard and right-click paste parsing.
# We must patch crates.io with the exact same commit to avoid compiling duplicate crossterm versions.
crossterm = { git = "https://github.com/HalFrgrd/crossterm.git", rev = "78def95567c26a463d9f7554d48c3940d797a254", default-features = false, features = ["bracketed-paste", "events", "osc52", "use-dev-tty", "libc"] }
chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
log = "0.4"
parking_lot = "0.12"
ansi-to-tui = { git = "https://github.com/HalFrgrd/ansi-to-tui.git", rev = "9101076f8e23010515ff6fe1571bf87a2d0d4abc"}
libc = "0.2.186"
anyhow = "1.0.102"
unicode-width = { version = "0.2.0", default-features = false }
unicode-segmentation = "1.13.2"
itertools = "0.14.0"
glob = "0.3.3"
flash = { git = "https://github.com/HalFrgrd/flash.git", rev = "7f37b29befc07aba742d71e7d9164d4ed75eaf50" }
skim = { git = "https://github.com/HalFrgrd/skim", rev = "7908ee85a5f6cd49575925fcc0bdef3999409d26", default-features =  false, features = ["algos_only"]}
lscolors = "0.21.0"
serde_json = "1.0"
pulldown-cmark = { version = "0.13", default-features = false }
shlex = "1.3.0"
rand = "0.10.1"
duration-str = "0.21.0"
parse-style = { version = "0.4.0" }
easing-function = "0.1.1"
strum = { version = "0.28.0", features = ["derive"] }
ctor = "1.0.7"
flycomp = { git = "https://github.com/HalFrgrd/flycomp.git", rev = "29813f47d0f733273ccfb03df72a33639b85902e" }

[features]
pre_bash_4_4 = []
standalone = []

[dev-dependencies]
rusty-fork = "0.3.1"

[profile.release]
panic = "unwind"
overflow-checks = true
lto = true

[build-dependencies]
chrono = { version = "0.4" }

# cross-rs configurations
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
dockerfile = "docker/cross/x86_64-unknown-linux-gnu.Dockerfile"
[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "docker/cross/aarch64-unknown-linux-gnu.Dockerfile"
[package.metadata.cross.target.x86_64-unknown-linux-musl]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-musl:0.2.5@sha256:77db671d8356a64ae72a3e1415e63f547f26d374fbe3c4762c1cd36c7eac7b99"
[package.metadata.cross.target.aarch64-unknown-linux-musl]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-musl:0.2.5@sha256:702154f52b2d8091671aa2c84d5582d849f949977228c735ff8462f93cc0e1e4"
[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
image = "ghcr.io/cross-rs/armv7-unknown-linux-gnueabihf:0.2.5@sha256:4a08bebb60f08d52c1885b643a768f163c7318c05f91cf119f6c02855ea52699"
[package.metadata.cross.target.i686-unknown-linux-gnu]
image = "ghcr.io/cross-rs/i686-unknown-linux-gnu:0.2.5@sha256:2647400f884dd399a3ce6f6d918fec0776d43e73f471f52e310cbe664ac1671f"
[package.metadata.cross.target.riscv64gc-unknown-linux-gnu]
image = "ghcr.io/cross-rs/riscv64gc-unknown-linux-gnu:0.2.5@sha256:67ee97dd4719390d299edfcf39f226360ccfb1539e08b078ec187d4848415794"
[package.metadata.cross.target.powerpc64le-unknown-linux-gnu]
image = "ghcr.io/cross-rs/powerpc64le-unknown-linux-gnu:0.2.5@sha256:de5114adcd786f6a41eb07379459aaae94de73670303e202ea3603d250c19091"
[package.metadata.cross.target.x86_64-unknown-freebsd]
image = "ghcr.io/cross-rs/x86_64-unknown-freebsd:0.2.5@sha256:a10c9fb4c82409147bdbec768518765d59bd11ac8675e63d6b09c089e834f5ec"

[patch.crates-io]
# Patch crates.io to point to the exact same git commit (78def95567c26a463d9f7554d48c3940d797a254) of our crossterm fork.
# This prevents Cargo from compiling both the registry and git versions of crossterm, which would duplicate
# the static event reader and cause stdin inputs typed during active commands (e.g. `sleep 1`) to be lost.
crossterm = { git = "https://github.com/HalFrgrd/crossterm.git", rev = "78def95567c26a463d9f7554d48c3940d797a254" }

